# POS-vasovoy

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/: auth.py  catalog.py  orders.py  settings.py  users.py
backend/app/core/: settings.py
backend/app/db/: mixins.py  session.py
backend/app/models/: __init__.py  order.py  order_delta.py  order_delta_item.py  order_item.py  product.py  product_category.py  restaurant.py  role.py  settings.py  user.py
backend/app/schemas/: auth.py  bootstrap.py  catalog.py  orders.py  settings.py  users.py
backend/app/services/: bootstrap.py  security.py
docs/: api.md  architecture.md  auth.md  data-model.md  infra.md
docs/decisions/: 0001-state-management.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: app.tsx  main.tsx  router.tsx  styles.css
frontend/src/api/: auth.ts  catalog.ts  orders.ts  settings.ts  users.ts
frontend/src/components/: NavIcon.tsx
frontend/src/features/auth/: LoginView.tsx
frontend/src/features/catalog/: CatalogView.tsx
frontend/src/features/home/: AdminHome.tsx
frontend/src/features/kitchen/: KitchenView.tsx
frontend/src/features/orders/: OrderView.tsx
frontend/src/layouts/: AppShell.tsx  ProtectedRoute.tsx  navConfig.ts
frontend/src/lib/: http.ts
frontend/src/store/: session.ts  ui.ts
frontend/src/types/: auth.ts  catalog.ts  orders.ts  settings.ts  users.ts
ops/backup/: README.md  pg_dump_daily.sh
(+3 files in other folders)
