[project]
name = "pos-restaurante-backend"
version = "0.1.0"
description = "Backend FastAPI para POS de restaurantes"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "PyJWT>=2.9",
]
